--- a/profile.html
+++ b/profile.html
@@ -9,22 +9,23 @@
   <meta name="author" content="Tim Mullen" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-touch-fullscreen" content="yes" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous"/>
   <link rel="stylesheet" href="lib/theme.css"/>
-
+<link href='https://fonts.googleapis.com/css?family=Raleway:400,300|Open+Sans:400,700,200' rel='stylesheet' type='text/css'>
   <script src="https://cdn.firebase.com/js/client/2.4.0/firebase.js"></script>
   <script src="lib/genauth.js"></script>
 </head>
 <body>
 
-<header class="navbar navbar-static-top navbar-inverse" id="top" role="banner">
-    <div class="container">
+<header class="navbar navbar-static-top" id="top" role="banner">
+    <div class="container-fluid">
         <div class="navbar-header">
-          <a href="#" class="navbar-brand">Content Manager</a>
+          <a href="#" class="navbar-brand"><span class="logo"></span> Content Manager</a>
           <div class="dropdown">
             <span id="dLabel" class="nav" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></span>
-            <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+            <ul class="dropdown-menu">
               <li><a tabindex="-1" href="profile.html">Profile</a></li>
               <li class="divider"></li>
               <li><a tabindex="-1" href="#" id="logout">Logout</a></li>
@@ -33,39 +34,78 @@
         </div>
     </div>
 </header>
-<div id="container" class="container">
-    <!-- PROFILE -->
-    <form id="profile" role="form">
-         <h2>Update Profile Information</h2>
-         <div class="form-group">
-             <label for="txtRegEmail">Name</label>
-             <input type="email" class="form-control" id="txtEmail" placeholder="Enter name" name="name" accept-charset="utf-8" />
-         </div>
-        <div class="form-group">
-            <label for="txtRegEmail">Email address</label>
-            <input type="email" class="form-control" id="txtEmail" placeholder="Enter email" name="email" accept-charset="utf-8" />
+<div id="container" class="container-fluid">
+<!-- PROFILE -->
+<div class="row">
+  <div id="profile-content" class="col-md-10 col-lg-10 col-lg-offset-1 col-md-offset-1">
+    <div class="panel panel-default">
+      <div class="panel-body">
+        <form id="profile" role="form">
+        <h2>Update Profile Information</h2>
+        <div class="loading" id="loading">
+
+          <div class="cssload-loader">
+          	<div class="cssload-inner cssload-one"></div>
+          	<div class="cssload-inner cssload-two"></div>
+          	<div class="cssload-inner cssload-three"></div>
+          </div>
         </div>
+        <div class="hide" id="load-control">
+          <br />
+            <div class="col-md-12">
+                <a href="http://www.gravatar.com" style="display:inline-block;font-size:11px;">
+              <div id="grav"></div>
+              Change</a>
+              <br /><br />
+            </div>
+            <div class="col-md-5 col-lg-5">
+               <div class="form-group">
+                   <label for="txtRegEmail">Name</label>
+                   <input class="form-control" id="txtName" placeholder="Enter name" name="name" accept-charset="utf-8" />
+               </div>
+              <div class="form-group">
+                  <label for="txtRegEmail">Email address</label>
+                  <input type="email" class="form-control" id="txtEmail" placeholder="Enter email" name="email" accept-charset="utf-8" />
+              </div>
+              <div class="form-group">
+                  <label for="txtRegPass">Current Password</label>
+                  <input required type="password" class="form-control" id="txtPassUp" placeholder="Password" name="password" accept-charset="utf-8" />
+              </div>
+              <button type="submit" class="btn btn-cta">Save Changes</button><br /><br />
+            </div>
+          </form>
+          <form id="profile-pass" role="form">
+            <div class="col-md-6 col-lg-6 col-md-offset-1 col-lg-offset-1">
 
-        <div class="form-group">
-            <label for="txtRegPass">Update Password</label>
-            <input type="password" class="form-control" id="txtPass" placeholder="New Password" name="password" accept-charset="utf-8" />
-            <input type="password" class="form-control" id="txtPass2" style="margin-top:5px;" placeholder="Confirm New Password" name="password2" accept-charset="utf-8" />
+              <div class="form-group">
+                  <label for="txtRegPass">Update Password</label>
+                  <input required type="password" class="form-control" id="txtPass" placeholder="Current Password" name="password" accept-charset="utf-8" />
+                  <input type="password" class="form-control" id="txtPass2" style="margin-top:15px;" placeholder="New Password" name="password" accept-charset="utf-8" />
+                  <input type="password" class="form-control" id="txtPass3" style="margin-top:15px;" placeholder="Confirm New Password" name="password2" accept-charset="utf-8" />
+              </div>
+              <button type="submit" class="btn btn-cta">Change Password</button>
+            </div>
+          </form>
+          <!-- / PROFILE -->
+          <div class="col-md-12 col-lg-12">
+            <hr />
+            <!-- ALERT BOX -->
+            <div id="alert" class="alert" role="alert">
+              Current password is required for both profile updates and password changes.
+            </div>
+            <!-- / ALERT BOX -->
+          </div>
         </div>
-        <button type="submit" class="btn btn-default">Save</button>
-    </form>
-    <!-- / PROFILE -->
-
-    <hr />
-    <!-- ALERT BOX -->
-    <div id="alert" class="alert" role="alert">
-         <h4 id="alert-title"></h4>
-
-        <p id="alert-detail"></p>
+      </div>
     </div>
-    <!-- / ALERT BOX -->
+  </div>
+</div>
+<hr />
+<div class="container-fluid">
+<p class="text-center foot">&copy;<script>document.write(new Date().getFullYear())</script> Tim Mullen</p>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-
+  <script src="lib/profile.js"></script>
 </body>
 </html>
