--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous"/>
   <link rel="stylesheet" href="lib/theme.css"/>
-<link href='https://fonts.googleapis.com/css?family=Raleway:400,300|Open+Sans:400,700,200' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,200|Antic+Slab|Pacifico' rel='stylesheet' type='text/css'>
   <script src="https://cdn.firebase.com/js/client/2.4.0/firebase.js"></script>
 </head>
 <body>
@@ -21,7 +21,7 @@
 <header class="navbar navbar-static-top" id="top" role="banner">
     <div class="container">
         <div class="navbar-header">
-            <a href="#" class="navbar-brand">Content Manager</a>
+            <a href="#" class="navbar-brand">furasta</a>
 
         </div>
     </div>
@@ -30,12 +30,11 @@
     <!-- REGISTER -->
     <div class="row">
       <div class="col-md-4 col-lg-4 col-sm-6 col-md-offset-4 col-lg-offset-4 col-sm-offset-3">
-        <div class="panel panel-default">
+        <h4 id="log-head">Login</h4>
+        <div class="panel panel-solid">
           <div class="zero-clipboard"><span class="btn-clipboard" id="regorlog">Register</span></div>
       <div class="panel-body">
     <form id="frmRegister" class="hide" role="form">
-         <h2>Register</h2>
-<br />
         <div class="form-group">
             <label for="txtRegNAme">Name</label>
             <input required type="text" class="form-control" id="txtName" placeholder="Enter name" name="email" accept-charset="utf-8" />
@@ -57,8 +56,6 @@
     <!-- / REGISTER -->
     <!-- LOGIN -->
     <form id="frmLogin" role="form">
-         <h2>Login</h2>
-<br />
         <div class="form-group">
             <label for="txtLogEmail">Email address</label>
             <input type="email" class="form-control" id="txtLogEmail" placeholder="Enter email" name="email" accept-charset="utf-8" />
@@ -76,14 +73,19 @@
 
     <div id="alert" class="alert" role="alert">
     </div>
-    <!-- / ALERT BOX -->
-  </div></div></div></div>
 
-  <hr />
-  <div class="container-fluid">
-  <p class="text-center foot">&copy;<script>document.write(new Date().getFullYear())</script> Tim Mullen</p>
-  </div>
+    <!-- / ALERT BOX -->
+
+  </div></div></div></div>
 </div>
+<br /><br />
+  <footer class="foot">
+  <p class="text-center">
+    &copy;<script>document.write(new Date().getFullYear())</script> Tim Mullen. All rights reserved.<br />
+    <a href="#">Cookie Policy</a> &bull; <a href="#">Privacy Policy</a>
+  </p>
+</footer>
+
 <script src="lib/login.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
