--- a/profile.html
+++ b/profile.html
@@ -13,7 +13,8 @@
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous"/>
   <link rel="stylesheet" href="lib/theme.css"/>
-<link href='https://fonts.googleapis.com/css?family=Raleway:400,300|Open+Sans:400,700,200' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="lib/logo.css"/>
+<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,200|Pacifico' rel='stylesheet' type='text/css'>
   <script src="https://cdn.firebase.com/js/client/2.4.0/firebase.js"></script>
   <script src="lib/genauth.js"></script>
 </head>
@@ -22,7 +23,7 @@
 <header class="navbar navbar-static-top" id="top" role="banner">
     <div class="container-fluid">
         <div class="navbar-header">
-          <a href="#" class="navbar-brand"><span class="logo"></span> Content Manager</a>
+          <a href="#" class="navbar-brand">furasta</a>
           <div class="dropdown">
             <span id="dLabel" class="nav" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></span>
             <ul class="dropdown-menu">
@@ -36,74 +37,75 @@
 </header>
 <div id="container" class="container-fluid">
 <!-- PROFILE -->
-<div class="row">
-  <div id="profile-content" class="col-md-10 col-lg-10 col-lg-offset-1 col-md-offset-1">
-    <div class="panel panel-default">
-      <div class="panel-body">
-        <form id="profile" role="form">
-        <h2>Update Profile Information</h2>
-        <div class="loading" id="loading">
-
-          <div class="cssload-loader">
-          	<div class="cssload-inner cssload-one"></div>
-          	<div class="cssload-inner cssload-two"></div>
-          	<div class="cssload-inner cssload-three"></div>
+  <div class="row">
+    <div id="profile-content" class="col-md-12 col-lg-12">
+      <h4>Update Profile Information</h4>
+      <div class="panel panel-solid">
+        <div class="panel-body">
+          <form id="profile" role="form">
+          <div class="loading" id="loading">
+            <div class="cssload-loader">
+            	<div class="cssload-inner cssload-one"></div>
+            	<div class="cssload-inner cssload-two"></div>
+            	<div class="cssload-inner cssload-three"></div>
+            </div>
           </div>
-        </div>
-        <div class="hide" id="load-control">
-          <br />
-            <div class="col-md-12">
-                <a href="http://www.gravatar.com" style="display:inline-block;font-size:11px;">
-              <div id="grav"></div>
-              Change</a>
-              <br /><br />
-            </div>
-            <div class="col-md-5 col-lg-5">
-               <div class="form-group">
-                   <label for="txtRegEmail">Name</label>
-                   <input class="form-control" id="txtName" placeholder="Enter name" name="name" accept-charset="utf-8" />
-               </div>
-              <div class="form-group">
-                  <label for="txtRegEmail">Email address</label>
-                  <input type="email" class="form-control" id="txtEmail" placeholder="Enter email" name="email" accept-charset="utf-8" />
+          <div class="hide" id="load-control">
+              <div class="col-md-12">
+                  <a href="http://www.gravatar.com" style="display:inline-block;font-size:11px;">
+                <div id="grav"></div>
+                Change</a>
+                <br /><br />
               </div>
-              <div class="form-group">
-                  <label for="txtRegPass">Current Password</label>
-                  <input required type="password" class="form-control" id="txtPassUp" placeholder="Password" name="password" accept-charset="utf-8" />
+              <div class="col-md-6 col-lg-6">
+                 <div class="form-group">
+                     <label for="txtRegEmail">Name</label>
+                     <input class="form-control" id="txtName" placeholder="Enter name" name="name" accept-charset="utf-8" />
+                 </div>
+                <div class="form-group">
+                    <label for="txtRegEmail">Email address</label>
+                    <input type="email" class="form-control" id="txtEmail" placeholder="Enter email" name="email" accept-charset="utf-8" />
+                </div>
+                <div class="form-group">
+                    <label for="txtRegPass">Current Password</label>
+                    <input required type="password" class="form-control" id="txtPassUp" placeholder="Password" name="password" accept-charset="utf-8" />
+                </div>
+                <button type="submit" class="btn btn-cta">Save Changes</button><br /><br />
               </div>
-              <button type="submit" class="btn btn-cta">Save Changes</button><br /><br />
-            </div>
-          </form>
-          <form id="profile-pass" role="form">
-            <div class="col-md-6 col-lg-6 col-md-offset-1 col-lg-offset-1">
+            </form>
+            <form id="profile-pass" role="form">
+              <div class="col-md-6 col-lg-6">
 
-              <div class="form-group">
-                  <label for="txtRegPass">Update Password</label>
-                  <input required type="password" class="form-control" id="txtPass" placeholder="Current Password" name="password" accept-charset="utf-8" />
-                  <input type="password" class="form-control" id="txtPass2" style="margin-top:15px;" placeholder="New Password" name="password" accept-charset="utf-8" />
-                  <input type="password" class="form-control" id="txtPass3" style="margin-top:15px;" placeholder="Confirm New Password" name="password2" accept-charset="utf-8" />
+                <div class="form-group">
+                    <label for="txtRegPass">Update Password</label>
+                    <input required type="password" class="form-control" id="txtPass" placeholder="Current Password" name="password" accept-charset="utf-8" />
+                    <input type="password" class="form-control" id="txtPass2" style="margin-top:15px;" placeholder="New Password" name="password" accept-charset="utf-8" />
+                    <input type="password" class="form-control" id="txtPass3" style="margin-top:15px;" placeholder="Confirm New Password" name="password2" accept-charset="utf-8" />
+                </div>
+                <button type="submit" class="btn btn-cta">Change Password</button>
               </div>
-              <button type="submit" class="btn btn-cta">Change Password</button>
+            </form>
+            <!-- / PROFILE -->
+            <div class="col-md-12 col-lg-12">
+              <hr />
+              <!-- ALERT BOX -->
+              <div id="alert" class="alert" role="alert">
+                Current password is required for both profile updates and password changes.
+              </div>
+              <!-- / ALERT BOX -->
             </div>
-          </form>
-          <!-- / PROFILE -->
-          <div class="col-md-12 col-lg-12">
-            <hr />
-            <!-- ALERT BOX -->
-            <div id="alert" class="alert" role="alert">
-              Current password is required for both profile updates and password changes.
-            </div>
-            <!-- / ALERT BOX -->
           </div>
         </div>
       </div>
     </div>
   </div>
 </div>
-<hr />
-<div class="container-fluid">
-<p class="text-center foot">&copy;<script>document.write(new Date().getFullYear())</script> Tim Mullen</p>
-</div>
+<footer class="foot">
+  <p class="text-center">
+    &copy;<script>document.write(new Date().getFullYear())</script> Tim Mullen. All rights reserved.<br />
+    <a href="#">Cookie Policy</a> &bull; <a href="#">Privacy Policy</a>
+  </p>
+</footer>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
   <script src="lib/profile.js"></script>
