--- a/login.html
+++ b/login.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-  <title>Content Manager</title>
+  <title>Content Creator</title>
   <meta charset="utf-8" />
   <meta name="description" content="Manage your email content and templates in an easy builder." />
   <meta name="keywords" content="content manager, email" />
@@ -21,7 +21,7 @@
 <header class="navbar navbar-static-top" id="top" role="banner">
     <div class="container">
         <div class="navbar-header">
-            <a href="#" class="navbar-brand">furasta</a>
+            <a href="#" class="navbar-brand">Content Creator</a>
 
         </div>
     </div>
@@ -30,7 +30,7 @@
     <!-- REGISTER -->
     <div class="row">
       <div class="col-md-4 col-lg-4 col-sm-6 col-md-offset-4 col-lg-offset-4 col-sm-offset-3">
-        <h4 id="log-head">Login</h4>
+        <h3 id="log-head">Login</h3>
         <div class="panel panel-solid">
           <div class="zero-clipboard"><span class="btn-clipboard" id="regorlog">Register</span></div>
       <div class="panel-body">
@@ -82,7 +82,7 @@
   <footer class="foot">
   <p class="text-center">
     &copy;<script>document.write(new Date().getFullYear())</script> Tim Mullen. All rights reserved.<br />
-    <a href="#">Cookie Policy</a> &bull; <a href="#">Privacy Policy</a>
+    <a href="#">Cookie Policy</a> &bull; <a href="privacy.html">Privacy Policy</a>
   </p>
 </footer>
 
