--- a/library.html
+++ b/library.html
@@ -37,17 +37,7 @@
 <div id="container" class="container-fluid">
 <!-- PROFILE -->
   <div class="row">
-    <div id="profile-nav" class="col-sm-2 col-md-2 col-lg-2">
-      <h3 class="hidden-xs">&nbsp;</h3>
-      <div class="panel panel-solid">
-          <ul class="nav nav-stacked">
-            <li role="presentation" class="active"><a href="#">Profile</a></li>
-            <li role="presentation"><a href="#">Teams</a></li>
-            <li role="presentation"><a href="#">Groups</a></li>
-          </ul>
-      </div>
-    </div>
-    <div id="profile-content" class="col-sm-10 col-md-10 col-lg-10">
+    <div id="profile-content" class="col-md-12 col-lg-12">
       <h3>Update Profile Information</h3>
       <div class="panel panel-solid">
         <div class="panel-body">
