--- a/library.html
+++ b/library.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-  <title>Content Manager</title>
+  <title>Content Creator | Library</title>
   <meta charset="utf-8" />
   <meta name="description" content="Manage your email content and templates in an easy builder." />
   <meta name="keywords" content="content manager, email" />
