--- a/admin.html
+++ b/admin.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-  <title>Content Manager</title>
+  <title>Content Creator | Admin</title>
   <meta charset="utf-8" />
   <meta name="description" content="Manage your email content and templates in an easy builder." />
   <meta name="keywords" content="content manager, email" />
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="lib/theme.css"/>
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,200|Pacifico' rel='stylesheet' type='text/css'>
   <script src="https://cdn.firebase.com/js/client/2.4.0/firebase.js"></script>
-  <script src="lib/genauth.js"></script>
+  <script src="lib/adminauth.js"></script>
 </head>
 <body>
 
@@ -40,70 +40,74 @@
     <div id="profile-nav" class="col-sm-2 col-md-2 col-lg-2">
       <h3 class="hidden-xs">&nbsp;</h3>
       <div class="panel panel-solid">
-          <ul class="nav nav-stacked">
-            <li role="presentation" class="active"><a href="#">Profile</a></li>
-            <li role="presentation"><a href="#">Team</a></li>
-            <li role="presentation"><a href="#">Groups</a></li>
+          <ul class="nav nav-stacked" role="tablist">
+            <li role="presentation" class="active"><a href="#usage" aria-controls="usage" role="tab" data-toggle="tab">Usage Statistics</a></li>
+            <li role="presentation"><a href="#teams" aria-controls="teams" role="tab" data-toggle="tab">Account Teams</a></li>
+            <li role="presentation"><a href="#users" aria-controls="users" role="tab" data-toggle="tab">Users</a></li>
           </ul>
       </div>
     </div>
     <div id="profile-content" class="col-sm-10 col-md-10 col-lg-10">
-      <h3>Update Profile Information</h3>
+      <h3>Admin Tools</h3>
       <div class="panel panel-solid">
         <div class="panel-body">
-          <form id="profile" role="form">
-          <div class="loading" id="loading">
-            <div class="cssload-loader">
-            	<div class="cssload-inner cssload-one"></div>
-            	<div class="cssload-inner cssload-two"></div>
-            	<div class="cssload-inner cssload-three"></div>
-            </div>
-          </div>
-          <div class="hide" id="load-control">
-              <div class="col-md-12">
-                  <a href="http://www.gravatar.com" style="display:inline-block;font-size:11px;">
-                <div id="grav"></div>
-                Change</a>
-                <br /><br />
-              </div>
-              <div class="col-md-6 col-lg-6">
-                 <div class="form-group">
-                     <label for="txtRegEmail">Name</label>
-                     <input class="form-control" id="txtName" placeholder="Enter name" name="name" accept-charset="utf-8" />
-                 </div>
-                <div class="form-group">
-                    <label for="txtRegEmail">Email address</label>
-                    <input type="email" class="form-control" id="txtEmail" placeholder="Enter email" name="email" accept-charset="utf-8" />
-                </div>
-                <div class="form-group">
-                    <label for="txtRegPass">Current Password</label>
-                    <input required type="password" class="form-control" id="txtPassUp" placeholder="Password" name="password" accept-charset="utf-8" />
-                </div>
-                <button type="submit" class="btn btn-cta">Save Changes</button><br /><br />
-              </div>
-            </form>
-            <form id="profile-pass" role="form">
-              <div class="col-md-6 col-lg-6">
 
-                <div class="form-group">
-                    <label for="txtRegPass">Update Password</label>
-                    <input required type="password" class="form-control" id="txtPass" placeholder="Current Password" name="password" accept-charset="utf-8" />
-                    <input type="password" class="form-control" id="txtPass2" style="margin-top:15px;" placeholder="New Password" name="password" accept-charset="utf-8" />
-                    <input type="password" class="form-control" id="txtPass3" style="margin-top:15px;" placeholder="Confirm New Password" name="password2" accept-charset="utf-8" />
+            <div class="tab-content">
+              <div role="tabpanel" class="tab-pane active" id="usage">
+                <h4 id="sub-head-1">Usage Statistics</h4>
+                <div class="loading" id="loading">
+                  <div class="cssload-loader">
+                  	<div class="cssload-inner cssload-one"></div>
+                  	<div class="cssload-inner cssload-two"></div>
+                  	<div class="cssload-inner cssload-three"></div>
+                  </div>
                 </div>
-                <button type="submit" class="btn btn-cta">Change Password</button>
+
+                <div class="hide" id="load-control">
+                </div>
               </div>
-            </form>
-            <!-- / PROFILE -->
+              <div role="tabpanel" class="tab-pane" id="teams">
+                <h4 id="sub-head-1">Account Teams</h4>
+                <div class="loading" id="loading">
+                  <div class="cssload-loader">
+                  	<div class="cssload-inner cssload-one"></div>
+                  	<div class="cssload-inner cssload-two"></div>
+                  	<div class="cssload-inner cssload-three"></div>
+                  </div>
+                </div>
+
+                <div class="hide" id="load-control">
+                </div>
+              </div>
+              <div role="tabpanel" class="tab-pane" id="users">
+                <h4 id="sub-head-1">Users</h4>
+                <div class="loading" id="loading">
+                  <div class="cssload-loader">
+                  	<div class="cssload-inner cssload-one"></div>
+                  	<div class="cssload-inner cssload-two"></div>
+                  	<div class="cssload-inner cssload-three"></div>
+                  </div>
+                </div>
+
+                <div class="hide" id="load-control">
+                  <div class="table-responsive">
+                    <table class="table-hover">
+                      <tbody>
+                        
+                      </tbody>
+                    </table>
+                  </div>
+                </div>
+              </div>
+            </div>
             <div class="col-md-12 col-lg-12">
               <hr />
               <!-- ALERT BOX -->
               <div id="alert" class="alert" role="alert">
-                Current password is required for both profile updates and password changes.
+
               </div>
               <!-- / ALERT BOX -->
             </div>
-          </div>
         </div>
       </div>
     </div>
@@ -117,6 +121,6 @@
 </footer>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-  <script src="lib/profile.js"></script>
+  <script src="lib/admin.js"></script>
 </body>
 </html>
