--- a/profile.html
+++ b/profile.html
@@ -25,7 +25,7 @@
           <a href="#" class="navbar-brand">Content Creator</a>
           <div class="dropdown">
             <span id="dLabel" class="nav" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></span>
-            <ul class="dropdown-menu">
+            <ul id="dList" class="dropdown-menu">
               <li><a tabindex="-1" href="profile.html">Account Settings</a></li>
               <li class="divider"></li>
               <li><a tabindex="-1" href="#" id="logout">Logout</a></li>
