--- a/privacy.html
+++ b/privacy.html
@@ -43,7 +43,7 @@
 
               <div class="col-md-12">
                   <p>
-                    This privacy policy discloses the privacy practices for Content Creator (<a href="http://sb-tmullen.rhcloud.com/">http://sb-tmullen.rhcloud.com/</a>). This privacy policy applies solely to information collected by this web site. It will notify you of the following:
+                    This privacy policy discloses the privacy practices for Content Creator (<a href="http://cc-tmullen.rhcloud.com/">http://cc-tmullen.rhcloud.com/</a>). This privacy policy applies solely to information collected by this web site. It will notify you of the following:
                     <ul>
                     <li>What personally identifiable information is collected from you through the web site, how it is used and with whom it may be shared.</li>
                     <li>What choices are available to you regarding the use of your data.</li>
