Add profile tabs for team & group

--- a/library.html
+++ b/library.html
@@ -24,7 +24,7 @@
         <div class="dropdown pull-right">
           <span id="dLabel" class="nav" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></span>
           <ul id="dList" class="dropdown-menu">
-            <li class="active"><a tabindex="-1" href="profile.html">Account Settings</a></li>
+            <li><a tabindex="-1" href="profile.html">Account Settings</a></li>
             <li class="divider"></li>
             <li><a tabindex="-1" href="#" id="logout">Logout</a></li>
           </ul>
@@ -38,7 +38,7 @@
           </div>
           <div class="collapse navbar-collapse" id="navbar-collapse-1">
             <ul class="nav navbar-nav">
-              <li><a href="library.html">Library</a></li>
+              <li class="active"><a href="library.html">Library</a></li>
               <li><a href="docs.html">Docs</a></li>
             </ul>
           </div>
