--- a/admin.html
+++ b/admin.html
@@ -24,7 +24,7 @@
         <div class="dropdown pull-right">
           <span id="dLabel" class="nav" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></span>
           <ul id="dList" class="dropdown-menu">
-            <li class="active"><a tabindex="-1" href="profile.html">Account Settings</a></li>
+            <li><a tabindex="-1" href="profile.html">Account Settings</a></li>
             <li class="divider"></li>
             <li><a tabindex="-1" href="#" id="logout">Logout</a></li>
           </ul>
@@ -93,8 +93,10 @@
                   </div>
                   <div class="form-group col-md-12 col-lg-12">
                   <button type="submit" class="btn btn-cta">Add Team</button>
+                  <hr />
                 </div>
                 </form>
+
                 <h4 id="sub-head-1">Account Teams</h4>
                 <div class="loading" id="loading-teams">
                   <div class="cssload-loader">
@@ -165,7 +167,7 @@
 <footer class="foot">
   <p class="text-center">
     &copy;<script>document.write(new Date().getFullYear())</script> Tim Mullen. All rights reserved.<br />
-    <a href="#">Cookie Policy</a> &bull; <a href="privacy.html">Privacy Policy</a>
+    <a href="cookies.html">Cookie Policy</a> &bull; <a href="privacy.html">Privacy Policy</a>
   </p>
 </footer>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
