--- a/profile.html
+++ b/profile.html
@@ -123,9 +123,13 @@
           <h3>Team Information</h3>
           <div class="panel panel-solid">
             <div class="panel-body">
+              <div class="col-sm-3 col-xs-12 col-md-3 col-lg-3 pull-right">
+                  <select id="teamSelect" class="form-control team-select">
 
+                  </select>
+              </div>
               <!-- / TEAM -->
-              <div class="col-md-12 col-lg-12">
+              <div class="col-md-12 col-lg-12 clear">
                 <hr />
                 <!-- ALERT BOX -->
                 <div id="alertteam" class="alert" role="alert">
