--- a/profile.html
+++ b/profile.html
@@ -128,6 +128,17 @@
 
                   </select>
               </div>
+              <br />
+              <table class="table table-hover">
+                <thead>
+                  <th>#</th>
+                  <th>Member</th>
+                  <th>Permission</th>
+                  <th></th>
+                </thead>
+                <tbody id="teamtable">
+                </tbody>
+              </table>
               <!-- / TEAM -->
               <div class="col-md-12 col-lg-12 clear">
                 <hr />
