--- a/template.html
+++ b/template.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-  <title>Content Creator | Library</title>
+  <title>Content Creator | Edit Template</title>
   <meta charset="utf-8" />
   <meta name="description" content="Manage your email content and templates in an easy builder." />
   <meta name="keywords" content="content manager, email" />
@@ -38,8 +38,8 @@
           </div>
           <div class="collapse navbar-collapse" id="navbar-collapse-1">
             <ul class="nav navbar-nav">
-              <li class="active"><a href="library.html">Library</a></li>
-              <li><a href="docs.html">Docs</a></li>
+              <li><a href="library.html">Library</a></li>
+              <li class="active"><a href="docs.html">Docs</a></li>
             </ul>
           </div>
       </div>
@@ -48,7 +48,7 @@
 <!-- PROFILE -->
   <div class="row">
     <div id="profile-content" class="col-md-12 col-lg-12">
-      <h3>Library</h3>
+      <h3>Edit Template</h3>
       <div class="panel panel-solid">
         <div class="panel-body">
 
