--- a/library.html
+++ b/library.html
@@ -45,14 +45,29 @@
       </div>
   </nav>
 <div id="container" class="container-fluid">
-<!-- PROFILE -->
+<!-- LIBRARY -->
   <div class="row">
-    <div id="profile-content" class="col-md-12 col-lg-12">
+    <div class="col-sm-4 col-xs-12 col-md-4 col-lg-3 pull-left">
       <h3>Library</h3>
+    </div>
+  </div>
+  <div class="row">
+    <div id="library-content" class="col-md-12 col-lg-12">
       <div class="panel panel-solid">
-        <div class="panel-body">
+        <div class="row">
+          <div class="panel-body">
+              <div class="col-sm-3 col-xs-12 col-md-3 col-lg-3 pull-right">
+                <div class="form-group">
+                  <select id="teamSelect" class="form-control team-select">
+                    <option>test</option>
+                  </select>
+                </div>
+              </div>
+              <div class="col-sm-3 col-xs-12 col-md-3 col-lg-3 pull-left">
+                <h4>Templates</h4>
+              </div>
 
-            <!-- / PROFILE -->
+            <!-- / LIBRARY -->
             <div class="col-md-12 col-lg-12">
               <hr />
               <!-- ALERT BOX -->
@@ -61,7 +76,7 @@
               </div>
               <!-- / ALERT BOX -->
             </div>
-
+          </div>
         </div>
       </div>
     </div>
