--- a/profile.html
+++ b/profile.html
@@ -160,29 +160,32 @@
                 </div>
               </div>
               <form id="add-member" role="form">
-                <div class="col-sm-7 col-xs-12 col-md-7 col-lg-6 pull-left">
 
-                    <div class="input-group col-sm-6 col-xs-12 col-md-7 col-lg-8 pull-left">
+                <div class="col-sm-7 col-xs-12 col-md-7 col-lg-6 pull-left">
+                  <h4 id="sub-head-1">Add Member</h4>
+                  <div class="row">
+                    <div class="form-group col-sm-7 col-md-6 col-lg-6">
                       <input type="email" placeholder="User Email" class="form-control" id="new-member"/>
                     </div>
-
-                    <div class="form-group pull-left">
+                    <div class="form-group col-sm-4 col-md-4 col-lg-4 col-xs-12">
                       <select id="permissionSelect" class="form-control team-select">
                         <option>admin</option>
                         <option>read</option>
                         <option>write</option>
                       </select>
                     </div>
-
-                  <div class="form-group">
-                    <button type="submit" class="btn btn-cta pull-left">Add Member</button>
+                    <div class="form-group col-sm-2 col-md-2 col-lg-2">
+                      <button type="submit" class="btn btn-cta pull-left">Add Member</button>
+                    </div>
                   </div>
-
                 </div>
               </form>
               </div>
               <div class="row">
+
                 <div class="col-md-12 col-lg-12 clear">
+                  <hr />
+                  <h4 id="sub-head-1">Team Members</h4>
                   <table class="table table-hover team-table">
                     <thead>
                       <th>#</th>
